--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
+<div class="overlay">
     <div class="container">
         <div class="row">
             <div class="col">
@@ -24,6 +24,144 @@
                 <p class="text-white bg-dark">You can find your order information below. <br> There will also be a confirmtion email send to {order.email}</p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 col-lg-7">
+                <div class="order-confirmation-wrapper p-2 border">
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted">Order Info:</small>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Order Number</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.order_number }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Order Date</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.date }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted">Order Details:</small>
+                        </div>
+                    </div>
+                    {% for item in order.lineitem.all %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">{{ item.product_name }}</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                        </div>
+                            <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                        </div>
+                    </div>      
+                    {% endfor %}               
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted">Deliver To:</small>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Full Name</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.full_name }}</p>
+                        </div> 
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Address 1</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.street_address1 }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Address 2</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                        </div>
+                            <p class="mb-0">{{ order.street_address2 }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Town or City</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.town_or_city }}</p>
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Postal Code</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.postalcode }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Country</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.country }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Phone Number</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.phone_number}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted">Billing Info:</small>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Order Total</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.order_total }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Delivery</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.delivery_cost }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Grand Total</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0">{{ order.grand_total }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <div class="row">
             <div class="col-12 col-lg-7 text-right">
                 <a href="{% url 'products' %}?category=holidays,specials" class="btn btn-black rounded-0 my-2">
