--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -58,7 +58,7 @@
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">{{ item.product_name }}</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                         </div>
                             <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
                         </div>
@@ -74,7 +74,7 @@
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Full Name</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.full_name }}</p>
                         </div> 
                     </div>
@@ -83,51 +83,66 @@
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Address 1</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.street_address1 }}</p>
                         </div>
                     </div>
-
+                    {% if order.street_address2 %}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Address 2</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                         </div>
                             <p class="mb-0">{{ order.street_address2 }}</p>
                         </div>
                     </div>
+                    {% endif %}
+                    {% if order.county %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white bg-dark font-weight-bold">Country</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.country }}</p>
+                        </div>
+                    </div>
+                    {% endif %}
+
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Town or City</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.town_or_city }}</p>
                         </div>
                     </div>
-                    
+
+                    {% if order.postalcode %}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Postal Code</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.postalcode }}</p>
                         </div>
                     </div>
+                    {% endif %}
 
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Country</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.country }}</p>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Phone Number</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.phone_number}}</p>
                         </div>
                     </div>
@@ -140,7 +155,7 @@
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Order Total</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.order_total }}</p>
                         </div>
                     </div>
@@ -148,7 +163,7 @@
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Delivery</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.delivery_cost }}</p>
                         </div>
                     </div>
@@ -156,7 +171,7 @@
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-white bg-dark font-weight-bold">Grand Total</p>
                         </div>
-                        <div class="col-12 col-md-4 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.grand_total }}</p>
                         </div>
                     </div>
