--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -40,7 +40,7 @@
                             Spend <strong>${{ free_delivery_delta }}</strong>more to get free next day delivery!
                         </p>
                     {% endif %}
-                    <a href="{ url 'view_bag' }" class="btn btn-dark btn-block rounded-0">
+                    <a href="{% url 'view_bag' %}" class="btn btn-dark btn-block rounded-0">
                         <span class="text-uppercase">Go To Secure Checkout</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
