--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -81,6 +81,11 @@
                                             {% else %}
                                                 <small class="text-muted">No Rating</small>
                                             {% endif %}
+                                            {% if request.user.is_superuser %}
+                                                <small class="ml-3"></small>
+                                                    <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                                                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>    
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
