--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -42,6 +42,11 @@
                         {% else %}
                             <small class="text-muted">No Rating</small>
                         {% endif %}
+                        {% if request.user.is_superuser %}
+                            <small class="ml-3"></small>
+                                <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                                <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>    
+                        {% endif %}
                         <p class="mt-3">{{ product.description }}</p>
                          <!-- form below is quantity button and keep shopping button-->
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
