--- a/static/css/base.css
+++ b/static/css/base.css
@@ -146,8 +146,35 @@ input[name='q']::placeholder {
 .allauth-form-inner-content a {
 	color: blue; /* text-info */
 }
+/* ------------------------------------------------------------------- Product Form */
 
-/* fixed top navbar only on medium and up */
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    border-radius: 0;
+}
+
+/* ------------------------------------------------------------------- Fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
         position: fixed;
